# OblivionC2

./: Cargo.toml  README.md
client/src/: App.tsx  package.json  styles.css  vite.config.ts
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/src/: commands.rs  config.rs  grpc_client.rs  lib.rs  state.rs
client/src/components/layout/: MainLayout.tsx
client/src/pages/: CampaignManager.tsx  SessionViewer.tsx
client/src/store/: campaignStore.ts  connectionStore.tsx  eventStore.ts  taskStore.ts
implant/: Cargo.toml  build.rs
implant/src/: config.rs  crypto.rs  main.rs  system.rs  tasks.rs
server/: Cargo.toml  build.rs
server/migrations/: 001_initial.sql
server/src/: config.rs  lib.rs  main.rs
server/src/campaign/: manager.rs  mod.rs
server/src/crypto/: keys.rs  mod.rs
server/src/database/: mod.rs  models.rs  repository.rs
server/src/logging/: audit.rs  mod.rs
server/src/operator/: commands.rs  grpc.rs  mod.rs
server/src/proto/: operator.proto
server/src/protocol/: c2.proto  messages.rs  mod.rs  noise_transport.rs
server/src/server/: listener.rs  mod.rs  session_manager.rs
server/src/tasks/: engine.rs  mod.rs  types.rs
src/: handlers.rs  main.rs
src/handlers/: check_in.rs  mod.rs  post_results.rs  request_task.rs
