[package]
name = "oblivion_c2"
version = "0.1.0"
edition = "2021"
authors = ["Oxi6r"]
description = "Red Team C2 Server - Authorized Security Testing Only"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Networking
tokio-rustls = "0.25"
rustls = "0.22"
rustls-pemfile = "2.0"

# Noise Protocol for transport security
snow = "0.9"

# Serialization
prost = "0.12"
bytes = "1.5"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }

# Cryptography
ring = "0.17"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
hmac = "0.12"

# Configuration & CLI
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
config = "0.14"

# Logging & Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
dashmap = "5.5"
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[build-dependencies]
prost-build = "0.12"