[package]
name = "oblivion_gui"
version = "0.1.0"
description = "OblivionC2 Operator GUI"
authors = ["OblivionC2 Team"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "1.5", features = ["shell-open", "window-maximize", "window-minimize", "window-close", "window-start-dragging"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# gRPC client
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1"

# Crypto for authentication
rustls = { version = "0.22", features = ["dangerous_configuration"] }
rustls-pemfile = "2.0"
x509-parser = "0.15"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
dashmap = "5.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]